--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ balances = "yearn_treasury.balances:export"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
-eth-portfolio = { git = "https://github.com/BobTheBuidler/eth-portfolio", branch = "master" }
+eth-portfolio-temp = "0.0.1"
 
 
 [tool.black]
