--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,11 @@ eth-portfolio-temp = ">=0.0.1,<0.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "*"
+types-requests = "*"
 types-setuptools = "*"
 
 [tool.mypy]
-exclude = ["build/","cache/","env/"]
+exclude = ["build/","cache/","env/", "tests/"]
 ignore_missing_imports = true
 check_untyped_defs = true
 
