--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,9 @@ eth-portfolio-temp = ">=0.0.1,<0.1"
 [tool.poetry.group.dev.dependencies]
 mypy = "*"
 types-requests = "*"
-types-setuptools = "*"
 
 [tool.mypy]
-exclude = ["build/","cache/","env/", "tests/"]
+exclude = ["build/","cache/","env/", "tests/", "setup.py"]
 ignore_missing_imports = true
 check_untyped_defs = true
 
