fix(docs): install read-the-docs theme

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ eth-portfolio-temp = ">=0.0.1,<0.1"
 [tool.poetry.group.dev.dependencies]
 mypy = "*"
 sphinx = "*"
+sphinx-rtd-theme = "*"
 types-requests = "*"
 
 [tool.mypy]
