--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ yearn-treasury = "yearn_treasury.main:export"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
-dao-treasury = "0.0.2"
+dao-treasury = ">=0.0.2,<0.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "*"
