--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -20,7 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
-        pyversion: [ "3.8", "3.9", "3.10", "3.11", "3.12" ]
+        pyversion: [ "3.10", "3.11", "3.12" ]
         include:
         - os: ubuntu-latest
           path: ~/.cache/pip
@@ -28,12 +28,6 @@ jobs:
           path: ~/Library/Caches/pip
         - os: windows-latest
           path: ~\AppData\Local\pip\Cache
-        exclude:
-        # gh runner throws "Error: Version ${{ matrix.pyversion }} with arch arm64 not found"
-        - os: macos-latest
-          pyversion: "3.8"
-        - os: macos-latest
-          pyversion: "3.9"
 
     steps:
       - name: Check out repository code
