--- a/yearn_treasury/address_labels.yaml
+++ b/yearn_treasury/address_labels.yaml
@@ -24,6 +24,8 @@
   YFI Buyer Contract:
     - "0x0000000000884A0E1fB44F9E24Fa3BDB19514fAE"
     - "0x0000000000051666BBfBB42925C3eE5d50cF6B10"
+  Multichain Fantom Bridge:
+    - "0xC564EE9f21Ed8A2d8E7e76c085740d5e4c5FaFbE"
 250:
   Yearn Strategist Multisig:
     - "0x72a34AbafAB09b15E7191822A679f28E067C4a16"
