--- a/yearn_treasury/address_labels.yaml
+++ b/yearn_treasury/address_labels.yaml
@@ -26,6 +26,8 @@
     - "0x0000000000051666BBfBB42925C3eE5d50cF6B10"
   Multichain Fantom Bridge:
     - "0xC564EE9f21Ed8A2d8E7e76c085740d5e4c5FaFbE"
+  yLockers Multisig:
+    - "0x4444AAAACDBa5580282365e25b16309Bd770ce4a"
 250:
   Yearn Strategist Multisig:
     - "0x72a34AbafAB09b15E7191822A679f28E067C4a16"
