--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ requires = [
     "mypy[mypyc]==1.17.0",
     "tomli>=2.0.0; python_version < '3.11'",
     "types-requests",
-    "dao-treasury>=0.0.42,<0.1",
+    "dao-treasury>=0.0.42,<0.1; platform_system != 'Windows'",
     "eth-typing==4.4.0",
 ]
 build-backend = "setuptools.build_meta"
