--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ yearn-treasury = "yearn_treasury.main:main"
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 dao-treasury = ">=0.0.42,<0.1"
+eth-brownie = ">=1.21.0,<1.22"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "*"
