chore(cicd): refactor build workflow

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,13 +24,8 @@ jobs:
         with:
           python-version: "3.12"
           
-      - name: Install Mypyc
-        run: pip install "mypy[mypyc]==1.18.1" types-requests .
-        
-      - name: Run Mypyc
-        env:
-          MYPYC_STRICT_DUNDER_TYPING: 1
-        run: make build
+      - name: Install library
+        run: pip install .
 
       - name: Check for changes
         run: |
