--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - master
+    paths:
+      - '**.py'
+      - '.github/workflows/black.yaml'
 
 jobs:
   format:
