--- a/.github/workflows/mypy.yaml
+++ b/.github/workflows/mypy.yaml
@@ -1,6 +1,12 @@
 name: MyPy
 
-on: pull_request
+on:
+  pull_request:
+    paths:
+      - '**.py'
+      - '.github/workflows/mypy.yaml'
+      - 'pyproject.toml'
+      - 'poetry.lock'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
