feat(test): add workflow_dispatch trigger to tox workflow

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -8,6 +8,7 @@ on:
       - '**/pytest.yaml'
       - 'pyproject.toml'
       - 'poetry.lock'
+  workflow_dispatch:
       
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
