--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -30,6 +30,10 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: '3.11'
+          cache: pip
+          cache-dependency-path: |
+              pyproject.toml
+              poetry.lock
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
