--- a/.github/workflows/test-install.yaml
+++ b/.github/workflows/test-install.yaml
@@ -36,6 +36,10 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
+          cache: pip
+          cache-dependency-path: |
+              pyproject.toml
+              poetry.lock
 
       - name: Upgrade pip and install uv
         run: |
