--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,6 +30,9 @@ jobs:
           cache-dependency-path: |
               pyproject.toml
               poetry.lock
+
+      - name: Delete existing build files
+        run: rm -rf build
           
       - name: Install library
         run: pip install .
