--- a/yearn_treasury/address_labels.yaml
+++ b/yearn_treasury/address_labels.yaml
@@ -30,6 +30,8 @@
     - "0x4444AAAACDBa5580282365e25b16309Bd770ce4a"
   yRoboTreasury Treasury Contract:
     - "0xEf77cc176c748d291EfB6CdC982c5744fC7211c8"
+  yRoboTreasury Stables Reserve:
+    - "0x278374fFb10B7D16E7633444c13e6E565EA57c28"
 250:
   Yearn Strategist Multisig:
     - "0x72a34AbafAB09b15E7191822A679f28E067C4a16"
