--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,6 +7,8 @@ on:
     paths-ignore:
       - '.github/workflows/**'
       - '!.github/workflows/build.yaml'
+      - '{**,.}*.json'
+      - '{**,.}*.md'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
