--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ requires = [
     "tomli>=2.0.0; python_version < '3.11'",
     "types-requests",
     "dao-treasury>=0.0.58,<0.1; platform_system == 'Linux'",
-    "eth-typing==4.4.0",
+    "eth-brownie==1.22.0.dev0",
+    "eth-typing==5.2.1",
 ]
 build-backend = "setuptools.build_meta"
 
