feat: use brownie prerelease

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ yearn-treasury = "yearn_treasury.main:main"
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 dao-treasury = ">=0.0.58,<0.1"
-eth-brownie = ">=1.21.0,<1.23"
+eth-brownie = { git = "https://github.com/eth-brownie/brownie", branch = "master" }
 faster-async-lru = ">=2.0.5,<3"
 
 [tool.poetry.group.dev.dependencies]
