--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -4,17 +4,28 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    paths:
+      - ./.github/workflows/docs.yaml
+      - pyproject.toml
+      - poetry.lock
+  workflow_dispatch:
+    inputs:
+      deploy:
+        description: 'Docs Deploy dry-run'
+        required: false
+        default: 'true'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
-  
+
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: write
   id-token: write
   pages: write
-  
+
 jobs:
   deploy-docs:
     runs-on: ubuntu-latest
@@ -42,10 +53,10 @@ jobs:
         run: |
           poetry install --no-interaction
           poetry run pip install -U setuptools
-        
+
       - name: Build documentation config
         run: make docs
-        
+
       - name: Setup brownie networks
         run: |
           poetry run brownie networks modify mainnet host=${{ secrets.WEB3_PROVIDER }}
@@ -60,26 +71,28 @@ jobs:
           make html
 
       - name: Deploy to GitHub Pages
+        if: ${{ github.event_name == 'push' }}
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs/_build/html
-          
+
       - name: Checkout
         uses: actions/checkout@v5
         with:
           ref: gh-pages
           persist-credentials: false
-          
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
-        
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
           # Upload entire repository
           path: '.'
-          
+
       - name: Deploy to GitHub Pages
+        if: ${{ github.event_name == 'push' }}
         id: deployment
         uses: actions/deploy-pages@v4
