--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -71,6 +71,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
+          # Upload entire repository
           path: '.'
 
   deploy-docs:
