--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,56 +32,19 @@ jobs:
           echo "The branch ${{ github.head_ref }} no longer exists on GitHub"
           exit 0
 
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v6
+      - name: Mypycify
+        uses: BobTheBuidler/mypycify@v0.0.2
         with:
           python-version: "3.12"
-          cache: pip
-          cache-dependency-path: |
-              pyproject.toml
-              poetry.lock
-
-      - name: Delete existing build files
-        run: rm -rf build
-          
-      - name: Install library
-        run: pip install .
-          
-      - name: Normalize C files for diffchecking
-        # This makes it much easier to diffcheck changes in the C files
-        run: |
-          # Insert DIFFCHECK_PLACEHOLDER macro at the top if not present
-          for f in build/*.c; do
-            if ! grep -q 'DIFFCHECK_PLACEHOLDER' "$f"; then
-              sed -i '1i#ifndef DIFFCHECK_PLACEHOLDER\n#define DIFFCHECK_PLACEHOLDER 0\n#endif' "$f"
-            fi
-          done
-          # Replace line number in CPy_AddTraceback with macro
-          sed -i 's/\(CPy_AddTraceback([^,]*, *[^,]*, *\)[0-9]\+\(, *[^)]*)\)/\1DIFFCHECK_PLACEHOLDER\2/g' build/*.c
-          # Replace index in CPyStatics[...] with macro
-          sed -i 's/CPyStatics\[[0-9]\+\]/CPyStatics[DIFFCHECK_PLACEHOLDER]/g' build/*.c
-
-      - name: Check for changes
-        run: |
-          if [[ -n $(git status --porcelain) ]]; then
-            echo "changes_detected=true" >> $GITHUB_ENV
-          else
-            echo "changes_detected=false" >> $GITHUB_ENV
-          fi
-
-      - name: Check if branch still exists on remote
-        run: |
-          if git ls-remote --exit-code --heads origin "$GITHUB_HEAD_REF"; then
-            echo "branch_exists=true" >> $GITHUB_ENV
-          else
-            echo "branch_exists=false" >> $GITHUB_ENV
-          fi
-
-      - name: Commit changes
-        if: env.changes_detected == 'true' && env.branch_exists == 'true'
-        run: |
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "chore: compile C files for source control"
-          git push
+          hash-key: |
+            pyproject.toml
+            setup.py
+            yearn_treasury/**/*.py
+          pip-cache-dependency-path: |
+            pyproject.toml
+            poetry.lock
+          normalize-source: true
+          push-source: true
+          commit-message: "chore: compile C files for source control"
+          trigger-pr-number: ${{ github.event.pull_request.number }}
+          trigger-branch-name: ${{ github.head_ref || github.ref_name }}
