--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,7 +33,7 @@ jobs:
           exit 0
 
       - name: Mypycify
-        uses: BobTheBuidler/mypycify@v0.2.2
+        uses: BobTheBuidler/mypycify@master
         with:
           python-version: "3.12"
           hash-key: |
