chore(cicd): centralize mypy config in pyproject for consistent type checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ myst-parser = "*"
 
 [tool.mypy]
 exclude = ["build/","cache/","env/", "tests/", "setup.py"]
+files = ["."]
 ignore_missing_imports = true
 check_untyped_defs = true
 
