fix(cicd): scope docs workflow paths for leaner CI

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -4,11 +4,23 @@ on:
   push:
     branches:
       - master
+    paths:
+      - ./.github/workflows/docs.yaml
+      - docs/**
+      - '**.py'
+      - pyproject.toml
+      - poetry.lock
+      - Makefile
+      - README.md
   pull_request:
     paths:
       - ./.github/workflows/docs.yaml
+      - docs/**
+      - '**.py'
       - pyproject.toml
       - poetry.lock
+      - Makefile
+      - README.md
   workflow_dispatch:
 
 concurrency:
